--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 ---
 layout: default
-title: Your New Jekyll Sitesss
+title: Schmiede - Playground of Ideas
 ---
 
-<div class="claim image-section">
+<div class="claim image-section" style="background-image: url({{ site.base_url }}/images/main_image.jpg)">
   <h1>PLAYGROUND OF IDEAS</h1>
   <p>
-    The Schmiede is a cooperative prototyping environment. Focused on the arts, hacking and entrepreneurship.
+    The Schmiede is a cooperative prototyping environment. Focused on the arts,
+    hacking and entrepreneurship, it is a place where our ideas come to play.
   </p>
   <!--<ul class="posts">
     {% for post in site.posts %}
@@ -17,23 +18,25 @@ title: Your New Jekyll Sitesss
 
 <div class="white-text-section">
   <h2>
-    WE MEET FOR 10 DAYS
+    WE MEET FOR 10 DAYS ...
   </h2>
   <p>
-    The Schmiede is a cooperative prototyping environment. Focused on the arts,
-    hacking and entrepreneurship with a strong tendency towards digital media,
-    it is a place where our ideas come to play.
+    ... in order to get inspired, network, create, present, collaborate and exchange.
   </p>
 </div>
 
 <div class="location image-section">
   <h2>
-    WE ARE IN HALLEIN
+    WE ARE IN HALLEIN ...
   </h2>
   <p>
-    The Schmiede is a cooperative prototyping environment. Focused on the arts, hacking and entrepreneurship.
+    ... a beautiful location and souroundings helps to focus on your projects and recharge creatively.
   </p>
   <p>
-    <a>More info</a>
+    <a href="" class="btn btn-primary btn-lg yellow">MORE INFO</a>
   </p>
 </div>
+
+<!-- <div class="image-section">
+  <iframe src="//player.vimeo.com/video/64489715" width="100%" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div> -->
