--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@ title: Schmiede - Playground of Ideas
   </p>
 </div>
 
+
+<div class="image-section" style="background-image: url({{ site.base_url }}/images/invent_sports.jpg);">
+  <h2>
+    WE INVENT SPORTS ...
+  </h2>
+</div>
+
+
 <!-- <div class="image-section">
   <iframe src="//player.vimeo.com/video/64489715" width="100%" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div> -->
