--- a/index.html
+++ b/index.html
@@ -44,6 +44,29 @@ title: Schmiede - Playground of Ideas
   </h2>
 </div>
 
+<div class="image-section" style="background-image: url({{ site.base_url }}/images/present.jpg);">
+  <h2>
+    WE PRESENT ...
+  </h2>
+</div>
+
+<div class="image-section" style="background-image: url({{ site.base_url }}/images/work_together.jpg);">
+  <h2>
+    WE WORK TOGETHER ...
+  </h2>
+</div>
+
+<div class="image-section" style="background-image: url({{ site.base_url }}/images/sax_brain.jpg);">
+  <h2>
+    WE CONNECT A SAX TO A BRAIN ...
+  </h2>
+</div>
+
+<div class="image-section" style="background-image: url({{ site.base_url }}/images/vr_glasses.jpg);">
+  <h2>
+    WE DO VR ...
+  </h2>
+</div>
 
 <!-- <div class="image-section">
   <iframe src="//player.vimeo.com/video/64489715" width="100%" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
