--- a/impressum.html
+++ b/impressum.html
@@ -3,39 +3,41 @@ layout: content
 title: Impressum - Schmiede
 ---
 
-<h1>Impressum </h1>
-<div class="whiteInnerBox">
-  <p>
-      official name: Schmiede Hallein<br>
-      austrian non-profit organisation for the promotion of digital culture  <br>
-      verein zur förderung der digitalen kultur  <br>
-      zahl/number: 887186914    <br>
-  </p>
-  <p>
-      smail: Vollererhofstr. 372, 5412 Puch, Austria, EU<br>
-      tel.: +43 (0) 6245 84337
-  </p>
-  <p>
-      email: schmiede{at}schmiede{dot}ca <br>
-      website: www.schmiede.ca
-  </p>
-  <p>
-      hinweis lt. offenlegungspflicht nach §25 mediengesetz:<br>
-      die schmiede hallein ist ein verein zur förderung der digtalen kultur. auf der website werden veranstaltungen und projekte vorgestellt und angekündigt
-  </p>
-  <p>
-      bzgl links: <br>
-      die schmiede-website kann hyperlinks auf webseiten dritter enthalten. die schmiede hallein übernimmt für die inhalte dieser webseiten weder eine verantwortung noch macht die schmiede sich diese webseiten und ihre inhalte zu eigen, da sie die verlinkten informationen nicht kontrolliert und für die dort bereit gehaltenen inhalte und informationen auch nicht verantwortlich ist.
-  </p>
+<div class="col-md-12">
+  <h1>Impressum </h1>
+  <div class="whiteInnerBox">
+    <p>
+        official name: Schmiede Hallein<br>
+        austrian non-profit organisation for the promotion of digital culture  <br>
+        verein zur förderung der digitalen kultur  <br>
+        zahl/number: 887186914    <br>
+    </p>
+    <p>
+        smail: Vollererhofstr. 372, 5412 Puch, Austria, EU<br>
+        tel.: +43 (0) 6245 84337
+    </p>
+    <p>
+        email: schmiede{at}schmiede{dot}ca <br>
+        website: www.schmiede.ca
+    </p>
+    <p>
+        hinweis lt. offenlegungspflicht nach §25 mediengesetz:<br>
+        die schmiede hallein ist ein verein zur förderung der digtalen kultur. auf der website werden veranstaltungen und projekte vorgestellt und angekündigt
+    </p>
+    <p>
+        bzgl links: <br>
+        die schmiede-website kann hyperlinks auf webseiten dritter enthalten. die schmiede hallein übernimmt für die inhalte dieser webseiten weder eine verantwortung noch macht die schmiede sich diese webseiten und ihre inhalte zu eigen, da sie die verlinkten informationen nicht kontrolliert und für die dort bereit gehaltenen inhalte und informationen auch nicht verantwortlich ist.
+    </p>
 
-  <p>
-      <h4>main page pano credits:</h4>
-      <b>participants 09 on roof</b> <br>
-      idea: Maria Morschitzky <br>
-      photo: Ela Grieshaber <br>
-      stitched: Benjamin Hohnheiser <br>
-      <br><br>
-      <b>other panos</b> <br>
-      gunnar lindner
-  </p>
+    <p>
+        <h4>main page pano credits:</h4>
+        <b>participants 09 on roof</b> <br>
+        idea: Maria Morschitzky <br>
+        photo: Ela Grieshaber <br>
+        stitched: Benjamin Hohnheiser <br>
+        <br><br>
+        <b>other panos</b> <br>
+        gunnar lindner
+    </p>
+  </div>
 </div>
