--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Schmiede - Playground of Ideas
 <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/main_image.jpg)">
   <h1>PLAYGROUND OF IDEAS</h1>
   <p>
-    The Schmiede is a cooperative prototyping environment. Focused on the arts,
-    hacking and entrepreneurship, it is a place where our ideas come to play.
+    Schmiede is a cooperative prototyping environment, focused on the arts, hacking
+    and entrepreneurship. Schmiede is a place where our ideas come to play.
   </p>
 </div>
 
@@ -25,7 +25,7 @@ title: Schmiede - Playground of Ideas
     WE ARE IN HALLEIN ...
   </h2>
   <p>
-    ... a beautiful location and souroundings helps to focus on your projects and recharge creatively.
+    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
   </p>
   <p>
     <a href="{{ site.base_url }}/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
@@ -45,6 +45,7 @@ title: Schmiede - Playground of Ideas
             <span class="quotes quotes-right">”</span>
           </p>
           <span>{{ testimonial.name }} - {{ testimonial.title }}</span>
+          <div style="clear:both;"></div>
         </div>
       </li>
     {% endfor %}
