--- a/location/index.html
+++ b/location/index.html
@@ -3,23 +3,53 @@ layout: content
 title: Saline Hallein - Schmiede
 ---
 
-<div class="claim image-section" style="background-image: url({{ site.base_url }}/images/location/dynamo.jpg)">
-  <h1>Saline Hallein</h1>
-  <p>
-    The place of work, life and entertainment for 10 days.
-  </p>
+<div class="col-md-12">
+  <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/location/dynamo.jpg);">
+    <h1>Saline Hallein</h1>
+    <p>
+      The place of work, life and entertainment for 10 days.
+    </p>
+  </div>
 </div>
 
-<div class="claim image-section" style="background-image: url({{ site.base_url }}/images/location/top.jpg)">
-  <h1>Saline Hallein</h1>
-  <p>
-    The place of work, life and entertainment for 10 days.
-  </p>
+<div class="tile-section">
+  <div class="col-md-8">
+    <img src="{{ site.base_url }}/images/location/dynamo.jpg" class="img-responsive" />
+  </div>
+  <div class="col-md-4">
+    <img src="{{ site.base_url }}/images/location/eingang.jpg" class="img-responsive" />
+  </div>
+  <div class="col-md-4">
+    <img src="{{ site.base_url }}/images/location/verdampferturm_aussen.jpg" class="img-responsive" />
+  </div>
 </div>
 
-<div class="claim image-section" style="background-image: url({{ site.base_url }}/images/location/top2.jpg)">
-  <h1>Saline Hallein</h1>
-  <p>
-    The place of work, life and entertainment for 10 days.
-  </p>
+<div class="clearfix"></div>
+
+<div class="tile-section">
+  <div class="col-md-8">
+    <img src="{{ site.base_url }}/images/location/sbg/waterfall_gregor_sams.gif" class="img-responsive"
+    style="height: 960px;" />
+  </div>
+  <div class="col-md-4">
+    <img src="{{ site.base_url }}/images/location/sbg/berge_gregor_sams.jpg" class="img-responsive" />
+  </div>
+  <div class="col-md-4">
+    <img src="{{ site.base_url }}/images/location/sbg/w_gregor_sams.jpg" class="img-responsive" />
+  </div>
+
+  <div class="col-md-4">
+    <img src="{{ site.base_url }}/images/location/sbg/watzmann.jpg" class="img-responsive" />
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+<div class="col-md-12">
+  <div style="background-image: url({{ site.base_url }}/images/location/top2.jpg)">
+    <h1>Saline Hallein</h1>
+    <p>
+      The place of work, life and entertainment for 10 days.
+    </p>
+  </div>
 </div>
