--- a/apply/index.html
+++ b/apply/index.html
@@ -2,56 +2,67 @@
 layout: default
 title: Schmiede - 2014 application
 ---
-
-<div class="claim image-section" style="background-image: url({{ site.base_url }}/images/main_image.jpg)">
-  <h1>SelfAssembling 11. - 22. September</h1>
-  <h2>Schmiede Application 2014</h2>
-</div>
-
-<div class="container ">
-  <p class="lead">
-    Every year an abandoned industrial saline on an <a href="{{ site.base_url }}/location/">island in Hallein, Austria</a>
-    hosts over 300 people.
-
-    It creates a space
-  </p>
-  <p>
-    Schmiede is a cooperative producers festival between the arts and entrepreneurship a playground where our ideas come to play.
-    Schmiede is based on three principles: Network, Create, Present.
-  </p>
-
-  We believe that in order to experience, refine and improve our model of reality (or work, or personal development) interacting, doing and producing, in the best case together, is of the essence. Therefore we, the Smiths, physically meet for ten days in order to get inspired, network, create, present, exchange, do, fail fast and learn to move forward. For this to happen Schmiede provides a basic cooperative prototyping environment. The objective is to learn from the process, each other, build trust and find collaborators the current or future projects. Schmiede does not teach. Schmiede provides inspiration and possibilities.
-
-
-    <dl class="dl-horizontal">
-      <dt>When:</dt>
-      <dd>11.-22. September 2014</dd>
-      <dt>Where:</dt>
-      <dd>Pernerinsel in Hallein, Salzburg, Austria.</dd>
-      <dt>Cost Participation:</dt>
-      <dd>50Eur</dd>
-      <dt>Cost Food (Breakfast & Lunch):</dt>
-      <dd>50Eur</dd>
-    </dl>
-
-  Application is open to everyone born after September 1996.
-
-  <div>
-    <h3>SCHEDULE</h3>
-    TBA
-
-    <h3>HOUSING</h3>
-
+<div class="application">
+  <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/main_image.jpg)">
+    <h1>SelfAssembling, 11. - 22. September</h1>
+    <h2>Schmiede Application 2014</h2>
   </div>
-</div>
 
-<div class="container">
-  <div id="schmiede-apply-form" class="col-md-9 col-md-offset-1">
-    <iframe
-       src="https://docs.google.com/forms/d/1ZbD89C2irLbwdB0I1b6byzbDhgC-i-6e5TWi1V1_0JM/viewform?embedded=true"
-       width="800" height="2400"
-       frameborder="0" marginheight="0" marginwidth="0">
-       Loading...
-    </iframe>
+  <div class="container" style="margin-top: 20px;">
+    <p class="lead">
+      Every year an abandoned industrial saline on an <a href="{{ site.base_url }}/location/">island in Hallein, Austria</a>
+      hosts over 300 people.
+
+      It creates a space...
+    </p>
+    <p>
+      Schmiede is a cooperative producers festival between the arts and entrepreneurship a playground where our ideas come to play.
+      Schmiede is based on three principles: Network, Create, Present.
+    </p>
+
+    We believe that in order to experience, refine and
+    improve our model of reality (or work, or personal development)
+    interacting, doing and producing, in the best case together,
+    is of the essence. Therefore we, the Smiths, physically meet for
+    ten days in order to get inspired, network, create, present,
+    exchange, do, fail fast and learn to move forward.
+     For this to happen Schmiede provides a basic cooperative
+      prototyping environment. The objective is to learn from the
+      process, each other, build trust and find collaborators
+      the current or future projects. Schmiede does not teach.
+      Schmiede provides inspiration and possibilities.
+
+
+      <dl class="dl-horizontal">
+        <dt>When:</dt>
+        <dd>11.-22. September 2014</dd>
+        <dt>Where:</dt>
+        <dd>Pernerinsel in Hallein, Salzburg, Austria.</dd>
+        <dt>Cost Participation:</dt>
+        <dd>50Eur</dd>
+        <dt>Cost Food (Breakfast & Lunch):</dt>
+        <dd>50Eur</dd>
+      </dl>
+
+    Application is open to everyone born after September 1996.
+
+    <div>
+      <h3>SCHEDULE</h3>
+      Will be announced soon
+
+      <h3>HOUSING</h3>
+      Housing information will be added soon
+    </div>
+  </div>
+
+  <div class="container">
+    <div id="schmiede-apply-form" class="col-md-9 col-md-offset-1">
+      <iframe
+         src="https://docs.google.com/forms/d/1ZbD89C2irLbwdB0I1b6byzbDhgC-i-6e5TWi1V1_0JM/viewform?embedded=true"
+         width="800" height="2400"
+         frameborder="0" marginheight="0" marginwidth="0">
+         Loading...
+      </iframe>
+    </div>
   </div>
 </div>
