--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Schmiede - Playground of Ideas
   </p>
 </div>
 
-<div class="white-text-section">
+<div class="white-text-section heading-text-section">
   <h2>
     WE MEET FOR 10 DAYS ...
   </h2>
@@ -19,20 +19,16 @@ title: Schmiede - Playground of Ideas
     ... in order to get inspired, network, create, present, collaborate and exchange.
   </p>
 </div>
-
-<div class="location image-section">
-  <h2>
-    WE ARE IN HALLEIN ...
-  </h2>
-  <p>
-    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
-  </p>
-  <p>
-    <a href="{{ site.base_url }}/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
-  </p>
+<div class="grey-text-section">
+  <div class="container">
+    <div class="col-md-12">
+      <iframe src="//player.vimeo.com/video/64489715" width="600px" height="340px"
+        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
-
 <div class="white-text-section">
+  <h3>WHAT PEOPLE SAY:</h3>
   <ul class="testimonials container">
     {% for testimonial in site.data.testimonials %}
       <li class="testimonial col-md-{{ testimonial.size }}">
@@ -52,7 +48,18 @@ title: Schmiede - Playground of Ideas
   </ul>
   <div style="clear: both;"></div>
 </div>
-
+<div class="location image-section">
+  <h2>
+    WE ARE IN HALLEIN ...
+  </h2>
+  <p>
+    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
+  </p>
+  <p>
+    <a href="{{ site.base_url }}/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
+  </p>
+</div>
+<!--
 <div class="image-section" style="background-image: url({{ site.base_url }}/images/invent_sports.jpg);">
   <h2>
     WE INVENT SPORTS ...
@@ -81,8 +88,5 @@ title: Schmiede - Playground of Ideas
   <h2>
     WE DO VR ...
   </h2>
-</div>
+</div>-->
 
-<!-- <div class="image-section">
-  <iframe src="//player.vimeo.com/video/64489715" width="100%" height="800" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div> -->
