--- a/apply/index.html
+++ b/apply/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Schmiede - 2014 application
 ---
 <div class="application">
-  <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/main_image.jpg)">
+  <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/work_together.jpg)">
     <h1>SelfAssembling, 11. - 22. September</h1>
-    <h2>Schmiede Application 2014</h2>
+    <h3>Schmiede Application 2014</h3>
   </div>
 
   <div class="container" style="margin-top: 20px;">
