--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@ title: Schmiede - Playground of Ideas
 </div>
 <div class="grey-text-section">
   <div class="container">
-    <div class="col-md-12">
+    <div class="col-md-7">
       <iframe src="//player.vimeo.com/video/64489715" width="600px" height="340px"
         frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+    <div class="col-md-5">
+      Not sure what text to put here. Still need some
     </div>
   </div>
 </div>
@@ -57,6 +60,16 @@ title: Schmiede - Playground of Ideas
   </p>
   <p>
     <a href="{{ site.base_url }}/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
+  </p>
+</div>
+<div class="image-section" style="background-image: url(http://philippwassibauer.github.io/schmiede_web/images/present.jpg);">
+  <h2>
+    Got your attention?
+  </h2>
+  <p>
+    The Schmiede 2014 is from 11. - 22. September.
+    <br /><br />
+    <a href="http://philippwassibauer.github.io/schmiede_web/location" class="btn btn-primary btn-lg yellow">APPLICATION</a>
   </p>
 </div>
 <!--
