--- a/location/index.html
+++ b/location/index.html
@@ -3,16 +3,21 @@ layout: content
 title: Saline Hallein - Schmiede
 ---
 
-<div class="col-md-12">
-  <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/location/dynamo.jpg);">
+<div class="col-md-12 white-text-section">
     <h1>Saline Hallein</h1>
-    <p>
+    <p class="lead">
       The place of work, life and entertainment for 10 days.
     </p>
   </div>
 </div>
-
-<div class="tile-section">
+<p class="lead">
+  The Saline on the Pernerinsel is a unique environment.
+  The building is not just a mere abandoned industrial facility with huge rooms,
+  but a patchwork of extraordinary spaces built between 1850 and 1950. The salt
+  storage rooms are all wooden, the tower concrete, steel and glas. Rooms range
+  from 23 meter tower to production halls to small dungeons.
+</p>
+<div class="tile-section row">
   <div class="col-md-8">
     <img src="{{ site.base_url }}/images/location/dynamo.jpg" class="img-responsive" />
   </div>
@@ -26,20 +31,30 @@ title: Saline Hallein - Schmiede
 
 <div class="clearfix"></div>
 
-<div class="tile-section">
-  <div class="col-md-8">
-    <img src="{{ site.base_url }}/images/location/sbg/waterfall_gregor_sams.gif" class="img-responsive"
-    style="height: 960px;" />
-  </div>
-  <div class="col-md-4">
-    <img src="{{ site.base_url }}/images/location/sbg/berge_gregor_sams.jpg" class="img-responsive" />
-  </div>
-  <div class="col-md-4">
-    <img src="{{ site.base_url }}/images/location/sbg/w_gregor_sams.jpg" class="img-responsive" />
-  </div>
+<p class="lead">
+  Hallein itself is a medium sized city which can provide most infrastructural
+  needs and peace from the world for focused work as well as outdoor experiences.
+</p>
 
-  <div class="col-md-4">
-    <img src="{{ site.base_url }}/images/location/sbg/watzmann.jpg" class="img-responsive" />
+<div class="tile-section">
+  <p class="lead">
+    All this is located on an island in the Salzach on the verge between the alps and the flat lands.
+  </p>
+  <div class="row">
+    <div class="col-md-8">
+      <img src="{{ site.base_url }}/images/location/sbg/waterfall_gregor_sams.gif" class="img-responsive"
+      style="height: 960px;" />
+    </div>
+    <div class="col-md-4">
+      <img src="{{ site.base_url }}/images/location/sbg/berge_gregor_sams.jpg" class="img-responsive" />
+    </div>
+    <div class="col-md-4">
+      <img src="{{ site.base_url }}/images/location/sbg/w_gregor_sams.jpg" class="img-responsive" />
+    </div>
+
+    <div class="col-md-4">
+      <img src="{{ site.base_url }}/images/location/sbg/watzmann.jpg" class="img-responsive" />
+    </div>
   </div>
 </div>
 
