--- a/apply/index.html
+++ b/apply/index.html
@@ -10,47 +10,37 @@ title: Schmiede - 2014 application
 
   <div class="container" style="margin-top: 20px;">
     <p class="lead">
-      Every year an abandoned industrial saline on an <a href="{{ site.base_url }}/location/">island in Hallein, Austria</a>
-      hosts over 300 people.
+      Every year an abandoned industrial salt refinery on an island in Hallein,
+      Austria opens up to around 300 Smiths and their ideas.
+      We physically gather in order to get inspired, network, create,
+      present and share. Schmiede provides a basic cooperative prototyping
+      environment and an infrastructure full of impulses and passionate people.
+    </p>
 
-      It creates a space...
+
+    <dl class="dl-horizontal">
+      <dt>When:</dt>
+      <dd>11.-22. September 2014</dd>
+      <dt>Where:</dt>
+      <dd>
+        <a href="https://maps.google.com/maps/ms?msa=0&msid=209371383360961785408.0004ab076cae1500b5f3e&dg=feature">
+          Pernerinsel in Hallein, Salzburg, Austria.
+        </a>
+      </dd>
+      <dt>Cost Participation:</dt>
+      <dd>50Eur</dd>
+      <dt>Cost Food (Breakfast & Lunch):</dt>
+      <dd>50Eur</dd>
+    </dl>
+    <p>
+      Application is open to everyone born after September 1996.
     </p>
     <p>
-      Schmiede is a cooperative producers festival between the arts and entrepreneurship a playground where our ideas come to play.
-      Schmiede is based on three principles: Network, Create, Present.
+      We will inform you about your status on June 15th.
     </p>
-
-    <p>
-    We believe that in order to experience, refine and
-    improve our model of reality (or work, or personal development)
-    interacting, doing and producing, in the best case together,
-    is of the essence. Therefore we, the Smiths, physically meet for
-    ten days in order to get inspired, network, create, present,
-    exchange, do, fail fast and learn to move forward.
-     For this to happen Schmiede provides a basic cooperative
-      prototyping environment. The objective is to learn from the
-      process, each other, build trust and find collaborators
-      the current or future projects. Schmiede does not teach.
-      Schmiede provides inspiration and possibilities.
-    </p>
-
-      <dl class="dl-horizontal">
-        <dt>When:</dt>
-        <dd>11.-22. September 2014</dd>
-        <dt>Where:</dt>
-        <dd>Pernerinsel in Hallein, Salzburg, Austria.</dd>
-        <dt>Cost Participation:</dt>
-        <dd>50Eur</dd>
-        <dt>Cost Food (Breakfast & Lunch):</dt>
-        <dd>50Eur</dd>
-      </dl>
-
-    Application is open to everyone born after September 1996.
-
     <div>
       <h3>SCHEDULE</h3>
       Will be announced soon
-
       <h3>HOUSING</h3>
       Housing information will be added soon
     </div>
