--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -1,30 +1,47 @@
 ---
-layout: content
+layout: default
 title: Saline Hallein - Schmiede
 ---
-
-<div class="col-md-12">
-  <h1>
-    SALZBURG MEDIA ART AWARD
-  </h1>
-  <p class="lead">
-    Since 2006 annually, the country of Salzburg, in cooperation with Schmiede
-    Hallein, supports a media art project from Salzburg with a <strong>10.000Eur grant</strong>.
-    The grant is intended to enable the realization of the proposed project. Project
-    proposals should not be longer than five pages. Applicants need to be born in,
-    currently be studying or officially be living in Salzburg. Project proposal
-    deadline is May 15th. The winning project/team will participate at the current
-    Schmiede for development and networking and will be presented on the second
-    Friday of next Schmiede.
-  </p>
-  <p>
-    <img src="{{ site.base_url }}/images/medienkunstpreis/cover.png" />
-    <img src="{{ site.base_url }}/images/medienkunstpreis/text.png" />
-    <img src="{{ site.base_url }}/images/medienkunstpreis/form.png" />
-  </p>
-  <p>
-    <a href="{{ site.base_url }}/images/medienkunstpreis/medienkunstpreis-2014.pdf" class="btn btn-primary btn-lg yellow">
-      Download 2014 Flyer & Form
-    </a>
-  </p>
+<div class="inline-page">
+  <div class="container">
+    <div class="col-md-8">
+      <h1>
+        SALZBURG MEDIA ART AWARD
+      </h1>
+      <p class="lead">
+        Since 2006 annually, the country of Salzburg, in cooperation with Schmiede
+        Hallein, supports a media art project from Salzburg with a <strong>10.000Eur grant</strong>.
+        <br />
+        The grant is intended to enable the realization of the proposed project.
+        Applicants need to be born in, currently be studying or officially be
+        living in Salzburg. Project proposal <strong>deadline is May 15th.</strong>
+        <br /><br />
+        The winning
+        project/team will participate at the current Schmiede for inspiration,
+        development and networking and will be presented on the second Friday
+        of next Schmiede.
+      </p>
+      <p>
+        <br />
+        <a href="{{ site.base_url }}/images/medienkunstpreis/medienkunstpreis-2014.pdf" class="btn btn-primary btn-lg yellow">
+          Download 2014 Flyer & Form
+        </a>
+        <br />
+        <br />
+        <br />
+      </p>
+    </div>
+    <div style="clear: both;"></div>
+  </div>
+  <div class="grey-text-section">
+    <div class="container">
+      <div class="col-md-6">
+        <img src="{{ site.base_url }}/images/medienkunstpreis/cover.png"  class="img-responsive" />
+      </div>
+      <div class="col-md-6">
+        <img src="{{ site.base_url }}/images/medienkunstpreis/text.png"  class="img-responsive" />
+      </div>
+      <div style="clear: both;"></div>
+    </div>
+  </div>
 </div>
