--- a/apply/index.html
+++ b/apply/index.html
@@ -10,15 +10,39 @@ title: Schmiede - 2014 application
 
   <div class="container" style="margin-top: 20px;">
     <p class="lead">
-      Every year an abandoned industrial salt refinery on an island in Hallein,
+      Every year an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
       Austria opens up to around 300 Smiths and their ideas.
       We physically gather in order to get inspired, network, create,
       present and share. Schmiede provides a basic cooperative prototyping
       environment and an infrastructure full of impulses and passionate people.
     </p>
+    <p class="lead">
+      The program of Schmiede14 is work in progress till midsummer.
+      The reason for this is that what actually will happens depends heavily on
+      the projects and people participating each year. <br /><br />
+
+      <strong>Let us know about the public events you want in the application or <a href="">get in touch</a></strong>
+      <br /><br />
+      As a reference, here is the program of Schmiede13: RETURN:
+      <div data-configid="0/4629621" style="width: 525px; height: 373px; position: relative; margin: 0 auto;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+    </p>
 
 
-    <dl class="dl-horizontal">
+    <h4>SchmiedeSchedule</h4>
+    <p class="lead">
+      Day 1 - Thursday - Arrival and First Presentation day<br />
+      Day 2 - Friday - Impulse: SchmiedeTalks<br />
+      Day 3 + 4 - Saturday and Sunday - Impulse and Learning: SchmiedeLabWorkshopDays<br />
+      Day 5 - Monday - Relax, share and network<br />
+      Day 6 + 8 - Tuesday till Wednesday - WorkPhase<br />
+      Day 7 - Thursday - SchmiedeWorkShow sign up day. The How and What must be finalized.<br />
+      Day 8 - Friday/day - Setting up, testing and cleaning up what is not needed on Saturday.<br />
+      Day 8 - Friday/evening - SalzburgMediaArtAward will be presented followed by SmithPerformances.<br />
+      Day 9 - Saturday - SchmiedeWorkShow day (will be hectic).<br />
+      Day 10 -Sunday - Last Breakfast und Auf Wiedersehen
+    </p>
+
+    <dl class="dl-horizontal lead">
       <dt>When:</dt>
       <dd>11.-22. September 2014</dd>
       <dt>Where:</dt>
@@ -32,25 +56,25 @@ title: Schmiede - 2014 application
       <dt>Cost Food (Breakfast & Lunch):</dt>
       <dd>50Eur</dd>
     </dl>
-    <p>
+    <p class="lead">
       Application is open to everyone born after September 1996.
     </p>
-    <p>
+    <p class="lead">
       We will inform you about your status on June 15th.
     </p>
     <div>
-      <h3>SCHEDULE</h3>
+      <!--<h3>SCHEDULE</h3>
       Will be announced soon
       <h3>HOUSING</h3>
       Housing information will be added soon
-    </div>
+    </div>-->
   </div>
 
   <div class="container">
     <div id="schmiede-apply-form" class="col-md-9 col-md-offset-1">
       <iframe
          src="https://docs.google.com/forms/d/1ZbD89C2irLbwdB0I1b6byzbDhgC-i-6e5TWi1V1_0JM/viewform?embedded=true"
-         width="800" height="2400"
+         width="800" height="2800"
          frameborder="0" marginheight="0" marginwidth="0">
          Loading...
       </iframe>
