--- a/apply/index.html
+++ b/apply/index.html
@@ -4,77 +4,83 @@ title: Schmiede - 2014 application
 ---
 <div class="application">
   <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/work_together.jpg)">
-    <h1>SelfAssembling, 11. - 22. September</h1>
-    <h2>Schmiede Application 2014</h2>
+    <h1>SCHMIEDE APPLICATION 2014</h1>
+    <h2>SelfAssembling, 11. - 22. September</h2>
   </div>
 
-  <div class="container" style="margin-top: 20px;">
-    <p class="lead">
-      Every year an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
-      Austria opens up to around 300 Smiths and their ideas.
-      We physically gather in order to get inspired, network, create,
-      present and share. Schmiede provides a basic cooperative prototyping
-      environment and an infrastructure full of impulses and passionate people.
-    </p>
-    <p class="lead">
-      The program of Schmiede14 is work in progress till midsummer.
-      The reason for this is that what actually will happens depends heavily on
-      the projects and people participating each year. <br /><br />
-
-      <strong>Let us know about the public events you want in the application or <a href="">get in touch</a></strong>
-      <br /><br />
-      As a reference, here is the program of Schmiede13: RETURN:
-      <div data-configid="0/4629621" style="width: 525px; height: 373px; position: relative; margin: 0 auto;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
-    </p>
-
-
-    <h4>SchmiedeSchedule</h4>
-    <p class="lead">
-      Day 1 - Thursday - Arrival and First Presentation day<br />
-      Day 2 - Friday - Impulse: SchmiedeTalks<br />
-      Day 3 + 4 - Saturday and Sunday - Impulse and Learning: SchmiedeLabWorkshopDays<br />
-      Day 5 - Monday - Relax, share and network<br />
-      Day 6 + 8 - Tuesday till Wednesday - WorkPhase<br />
-      Day 7 - Thursday - SchmiedeWorkShow sign up day. The How and What must be finalized.<br />
-      Day 8 - Friday/day - Setting up, testing and cleaning up what is not needed on Saturday.<br />
-      Day 8 - Friday/evening - SalzburgMediaArtAward will be presented followed by SmithPerformances.<br />
-      Day 9 - Saturday - SchmiedeWorkShow day (will be hectic).<br />
-      Day 10 -Sunday - Last Breakfast und Auf Wiedersehen
-    </p>
-
-    <dl class="dl-horizontal lead">
-      <dt>When:</dt>
-      <dd>11.-22. September 2014</dd>
-      <dt>Where:</dt>
-      <dd>
-        <a href="https://maps.google.com/maps/ms?msa=0&msid=209371383360961785408.0004ab076cae1500b5f3e&dg=feature">
-          Pernerinsel in Hallein, Salzburg, Austria.
-        </a>
-      </dd>
-      <dt>Cost Participation:</dt>
-      <dd>50Eur</dd>
-      <dt>Cost Food (Breakfast & Lunch):</dt>
-      <dd>50Eur</dd>
-    </dl>
-    <p class="lead">
-      Application is open to everyone born after September 1996.
-    </p>
-    <p class="lead">
-      We will inform you about your status on June 15th.
-    </p>
-    <div>
-      <!--<h3>SCHEDULE</h3>
-      Will be announced soon
-      <h3>HOUSING</h3>
-      Housing information will be added soon
-    </div>-->
+  <div class="container" style="margin-top: 40px;">
+    <div class="col-md-9 col-md-offset-1">
+      <p class="lead">
+        Every year an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
+        Austria opens up to around 300 Smiths and their ideas.
+        We physically gather in order to get inspired, network, create,
+        present and share. Schmiede provides a basic cooperative prototyping
+        environment and an infrastructure full of impulses and passionate people.
+      </p>
+    </div>
+    <div style="clear: both;"></div>
   </div>
 
+  <div class="grey-text-section" style="padding: 20px; margin: 10px auto 30px auto;">
+    <div class="container">
+      <div class="col-md-9 col-md-offset-1">
+        <p>
+          <dl class="dl-horizontal lead">
+            <dt>When:</dt>
+            <dd>11.-22. September 2014</dd>
+            <dt>Where:</dt>
+            <dd>
+              <a href="https://maps.google.com/maps/ms?msa=0&msid=209371383360961785408.0004ab076cae1500b5f3e&dg=feature">
+                Pernerinsel in Hallein, Salzburg, Austria.
+              </a>
+            </dd>
+            <dt>Cost Participation:</dt>
+            <dd>50Eur</dd>
+            <dt>Application closes:</dt>
+            <dd>30th May</dd>
+            <dt>Application confirmation:</dt>
+            <dd>15th June</dd>
+            <dt>Age limit:</dt>
+            <dd>Born after September 1996</dd>
+          </dl>
+        </p>
+      </div>
+    </div>
+    <div style="clear: both;"></div>
+  </div>
   <div class="container">
+    <div class="col-md-9 col-md-offset-1">
+      <p class="lead">
+        The program of Schmiede14 is work in progress till midsummer.
+        The reason for this is that what actually will happens depends heavily on
+        the projects and people participating each year. <br /><br />
+        <strong>Let us know about  public events you want in the application or <a href="/impressum.html">get in touch</a></strong>
+        <br /><br />
+        As a reference, here is the program of Schmiede13: RETURN:
+        <div data-configid="0/4629621" style="width: 525px; height: 373px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
+      </p>
+
+      <h2 style="margin-top: 40px;">Schmiede phases</h2>
+      <p class="lead">
+        Day 1 - Arrival and first presentation day<br />
+        Day 2 - Impulse: SchmiedeTalks<br />
+        Day 3 + 4 - Impulse and Learning: SchmiedeLabWorkshopDays<br />
+        Day 5 - Relax, share and network<br />
+        Day 6 + 8 - WorkPhase<br />
+        Day 7 - SchmiedeWorkShow sign up day. The plan for the Workshow must be finalized.<br />
+        Day 8 - Setting up, testing and cleaning up what is not needed on Saturday.<br />
+        Day 8 - SalzburgMediaArtAward will be presented followed by SmithPerformances.<br />
+        Day 9 - SchmiedeWorkShow day (will be hectic).<br />
+        Day 10 - Last Breakfast und Auf Wiedersehen
+      </p>
+    </div>
+  </div>
+
+  <div class="container" style="margin-top: 40px;">
     <div id="schmiede-apply-form" class="col-md-9 col-md-offset-1">
       <iframe
          src="https://docs.google.com/forms/d/1ZbD89C2irLbwdB0I1b6byzbDhgC-i-6e5TWi1V1_0JM/viewform?embedded=true"
-         width="800" height="2800"
+         width="800" height="2700"
          frameborder="0" marginheight="0" marginwidth="0">
          Loading...
       </iframe>
