--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ title: Schmiede - Playground of Ideas
 <div class="grey-text-section">
   <div class="container">
     <div class="col-md-7">
-      <iframe src="//player.vimeo.com/video/64489715" width="600px" height="340px"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe src="//player.vimeo.com/video/64489715" width="530px" height="300px" class="img-responsive"
+        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+      </iframe>
     </div>
     <div class="col-md-5 lead">
       Take a look and in 5:20 get a feeling of the atmosphere and scope of Schmiede. Meet some of the Smiths, see what they are like and what they have to say about Schmiede.
@@ -74,7 +75,7 @@ title: Schmiede - Playground of Ideas
     Got your attention?
   </h2>
   <p>
-    Join us for the Schmiede14, 11. - 22. September 2014
+    Join us for the Schmiede14, 11. - 22. September 2014!
     <br /><br />
     <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a>
   </p>
