--- a/impressum.html
+++ b/impressum.html
@@ -17,7 +17,7 @@ title: Impressum - Schmiede
         tel.: +43 (0) 6245 84337
     </p>
     <p>
-        email: schmiede{at}schmiede{dot}ca <br>
+        email: office {at} schmiede {dot} ca <br>
         website: www.schmiede.ca
     </p>
     <p>
