--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -24,10 +24,8 @@ title: Saline Hallein - Schmiede
       <p>
         <br />
         <!-- <a href="{{ site.base_url }}/images/medienkunstpreis/medienkunstpreis-2014.pdf" class="btn btn-primary btn-lg yellow">
-          Download 2014 Flyer & Form -->
-        </a>
-        <br />
-        <br />
+          Download 2014 Flyer & Form
+        </a>-->
         <br />
       </p>
     </div>
