--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Schmiede - Playground of Ideas
 
 <div class="white-text-section heading-text-section">
   <h2>
-    WE MEET FOR 10 DAYS ....
+    WE MEET FOR 10 DAYS ...
   </h2>
   <p>
     ... in order to get inspired, network, create, present, collaborate and exchange.
