--- a/index.html
+++ b/index.html
@@ -1,113 +1,30 @@
 ---
 layout: default
-title: Schmiede - Playground of Ideas
+title: Schmiede 2014 - SelbstAssemblierung
 ---
+<style>
+  .footer .container {
+    padding-left: 30px;
+  }
+</style>
 
-<div class="claim image-section" style="background-image: url(/images/main_image.jpg)">
-  <h1>PLAYGROUND OF IDEAS</h1>
-  <p>
-    Schmiede is a cooperative prototyping environment, focused on the arts, hacking
-    and entrepreneurship. Schmiede is a place where our ideas come to play.
-  </p>
-</div>
-
-<div class="white-text-section heading-text-section">
-  <h2>
-    WE MEET FOR 10 DAYS ...
-  </h2>
-  <p>
-    ... in order to get inspired, network, create, present, collaborate and exchange.
-  </p>
-</div>
-<div class="grey-text-section">
-  <div class="container">
-    <div class="col-md-7">
-      <iframe src="//player.vimeo.com/video/64489715" width="530px" height="300px"
-        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-      </iframe>
-    </div>
-    <div class="col-md-5 lead">
-      Take a look and in 5:20 get a feeling of the atmosphere and scope of Schmiede. Meet some of the Smiths, see what they are like and what they have to say about Schmiede.
-
-      you can also listen to <a href="https://soundcloud.com/schmiede/sets/schmiedeinterviews">SmithInterviews on SoundCloud</a>
-
+<div class="container">
+  <div style="margin: 70px 30px 30px 30px;">
+    <h1 style="font-weight: normal;">SCHMIEDE<b>2014</b>: SELBST<b>ASSEMBLIERUNG</b> <br /></h1>
+    <a target="_BLANK" href="http://issuu.com/schmiede/docs/schmiede14_selbstassemblierung_prog">
+      <img src="/images/2014_header.png">
+    </a>
+    <div class="central-year-block">
+      <div class="col-md-4">
+        <a target="_BLANK" href="http://www.extrabooking.com/widget/5LEH-TI9G-K45N">TICKETS</a>
+      </div>
+      <div class="col-md-4">
+        <a target="_BLANK" href="http://issuu.com/schmiede/docs/schmiede14_selbstassemblierung_prog">PROGRAMM</a>
+      </div>
+      <div class="col-md-4">
+        <a href="http://schmiede.tumblr.com/">BLOG</a>
+      </div>
+      <div style="clear: both;"></div>
     </div>
   </div>
 </div>
-<div class="white-text-section">
-  <div class="container">
-    <div class="col-md-12">
-      <h3>WHAT PEOPLE SAY:</h3>
-      <ul class="testimonials">
-        {% for testimonial in site.data.testimonials %}
-          <li class="testimonial col-md-{{ testimonial.size }}">
-            <div class="circular image"
-              style="background-image: url(/images/testimonials/{{ testimonial.image }});"></div>
-            <div class="content">
-              <p>
-                <span class="quotes quotes-left">“</span>
-                {{ testimonial.testimonial }}
-                <span class="quotes quotes-right">”</span>
-              </p>
-              <span>{{ testimonial.name }} - {{ testimonial.title }}</span>
-              <div style="clear:both;"></div>
-            </div>
-          </li>
-        {% endfor %}
-      </ul>
-    </div>
-  </div>
-  <div style="clear: both;"></div>
-</div>
-<div class="location image-section">
-  <h2>
-    WE ARE IN HALLEIN ...
-  </h2>
-  <p>
-    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
-  </p>
-  <p>
-    <a href="/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
-  </p>
-</div>
-<div class="image-section" style="background-image: url(http://philippwassibauer.github.io/schmiede_web/images/present.jpg);">
-  <h2>
-    Got your attention?
-  </h2>
-  <p>
-    Join us for the Schmiede14, 11. - 21. September 2014!
-    <br /><br />
-    <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a>
-  </p>
-</div>
-<!--
-<div class="image-section" style="background-image: url(/images/invent_sports.jpg);">
-  <h2>
-    WE INVENT SPORTS ...
-  </h2>
-</div>
-
-<div class="image-section" style="background-image: url(/images/present.jpg);">
-  <h2>
-    WE PRESENT ...
-  </h2>
-</div>
-
-<div class="image-section" style="background-image: url(/images/work_together.jpg);">
-  <h2>
-    WE WORK TOGETHER ...
-  </h2>
-</div>
-
-<div class="image-section" style="background-image: url(/images/sax_brain.jpg);">
-  <h2>
-    WE CONNECT A SAX TO A BRAIN ...
-  </h2>
-</div>
-
-<div class="image-section" style="background-image: url(/images/vr_glasses.jpg);">
-  <h2>
-    WE DO VR ...
-  </h2>
-</div>-->
-
