--- a/apply/index.html
+++ b/apply/index.html
@@ -4,8 +4,8 @@ title: Schmiede - 2014 application
 ---
 <div class="application">
   <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/work_together.jpg)">
-    <h1>SCHMIEDE APPLICATION 2014</h1>
-    <h2>SelfAssembling, 11. - 21. September</h2>
+    <h1>SCHMIEDE APPLICATION 2015</h1>
+    <h2>late September</h2>
   </div>
 
   <div class="container" style="margin-top: 40px;">
@@ -27,7 +27,7 @@ title: Schmiede - 2014 application
         <p>
           <dl class="dl-horizontal lead">
             <dt>When:</dt>
-            <dd>11.-21. September 2014</dd>
+            <dd>late September 2015 (exact dates soon)</dd>
             <dt>Where:</dt>
             <dd>
               <a href="https://maps.google.com/maps/ms?msa=0&msid=209371383360961785408.0004ab076cae1500b5f3e&dg=feature">
@@ -51,7 +51,7 @@ title: Schmiede - 2014 application
   <div class="container">
     <div class="col-md-9 col-md-offset-1">
       <p class="lead">
-        The program of Schmiede14 is work in progress till midsummer.
+        The program of Schmiede15 is work in progress till midsummer.
         The reason for this is that what actually will happens depends heavily on
         the projects and people participating each year. <br /><br />
         <strong>Let us know about  public events you want in the application or <a href="/impressum.html">get in touch</a></strong>
@@ -71,7 +71,7 @@ title: Schmiede - 2014 application
         Day 8 - Setting up, testing and cleaning up what is not needed on Saturday.<br />
         Day 8 - SalzburgMediaArtAward will be presented followed by SmithPerformances.<br />
         Day 9 - SchmiedeWorkShow day (will be hectic).<br />
-        Day 10 - Last Breakfast und Auf Wiedersehen
+        Day 10 - Last Breakfast and 'Auf Wiedersehen'
       </p>
     </div>
   </div>
@@ -80,7 +80,7 @@ title: Schmiede - 2014 application
     <div id="schmiede-apply-form" class="col-md-9 col-md-offset-1">
       <iframe
          src="https://docs.google.com/forms/d/1ZbD89C2irLbwdB0I1b6byzbDhgC-i-6e5TWi1V1_0JM/viewform?embedded=true"
-         width="800" height="3000"
+         width="800" height="3400"
          frameborder="0" marginheight="0" marginwidth="0">
          Loading...
       </iframe>
