--- a/impressum.html
+++ b/impressum.html
@@ -29,15 +29,10 @@ title: Impressum - Schmiede
         die schmiede-website kann hyperlinks auf webseiten dritter enthalten. die schmiede hallein übernimmt für die inhalte dieser webseiten weder eine verantwortung noch macht die schmiede sich diese webseiten und ihre inhalte zu eigen, da sie die verlinkten informationen nicht kontrolliert und für die dort bereit gehaltenen inhalte und informationen auch nicht verantwortlich ist.
     </p>
 
+
+    <h4>pictures on Schmiede.ca by:</h4>
     <p>
-        <h4>main page pano credits:</h4>
-        <b>participants 09 on roof</b> <br>
-        idea: Maria Morschitzky <br>
-        photo: Ela Grieshaber <br>
-        stitched: Benjamin Hohnheiser <br>
-        <br><br>
-        <b>other panos</b> <br>
-        gunnar lindner
+        Gunnar Lindner, Gregor Sams, Ela Grieshaber, Stadt Hallein, Tourismusverbnd Hallein, Schmiede Hallein
     </p>
   </div>
 </div>
