--- a/apply/index.html
+++ b/apply/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Schmiede - 2014 application
+title: Schmiede Application
 ---
 <div class="application">
   <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/work_together.jpg)">
