--- a/apply/index.html
+++ b/apply/index.html
@@ -10,7 +10,7 @@ title: Schmiede Application
   <div class="container" style="margin-top: 40px;">
     <div class="col-md-9 col-md-offset-1">
       <p class="lead">
-        Every year an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
+        Every year in late September an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
         Austria opens up to around 300 Smiths and their ideas.
         We physically gather in order to get inspired, network, create,
         present and share. Schmiede provides a basic cooperative prototyping
@@ -26,7 +26,7 @@ title: Schmiede Application
         <p>
           <dl class="dl-horizontal lead">
             <dt>When:</dt>
-            <dd>late September 2015 (exact dates soon)</dd>
+            <dd>late September 2015 (exact dates in application)</dd>
             <dt>Where:</dt>
             <dd>
               <a href="https://maps.google.com/maps/ms?msa=0&msid=209371383360961785408.0004ab076cae1500b5f3e&dg=feature">
@@ -36,9 +36,9 @@ title: Schmiede Application
             <dt>Cost Participation:</dt>
             <dd>50Eur</dd>
             <dt>Application closes:</dt>
-            <dd>31th May</dd>
+            <dd>May 31st</dd>
             <dt>Application confirmation:</dt>
-            <dd>15th June</dd>
+            <dd>June 15th</dd>
             <dt>Age limit:</dt>
             <dd>18+</dd>
           </dl>
