--- a/apply/index.html
+++ b/apply/index.html
@@ -4,7 +4,7 @@ title: Schmiede Application
 ---
 <div class="application">
   <div class="claim image-section" style="background-image: url({{ site.base_url }}/images/work_together.jpg)">
-    <h1>SCHMIEDE APPLICATION</h1>
+    <h1>SCHMIEDE APPLICATION (0293749ß08234/</h1>
   </div>
 
   <div class="container" style="margin-top: 40px;">
