--- a/apply/index.html
+++ b/apply/index.html
@@ -55,9 +55,9 @@ title: Schmiede Application
         the projects and people participating each year. <br /><br />
         <strong>Let us know about  public events you want in the application or <a href="/impressum.html">get in touch</a></strong>
         <br /><br />
-        As a reference, here is the program of Schmiede13: RETURN:
-        <div data-configid="0/4629621" style="width: 525px; height: 373px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
-      </p>
+        As a reference, here is the program of Schmiede15: READY:
+ <div data-configid="3084599/34031483" style="width:525px; height:373px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>      
+ </p>
 
       <h2 style="margin-top: 40px;">Schmiede phases</h2>
       <p class="lead">
