--- a/apply/index.html
+++ b/apply/index.html
@@ -33,7 +33,7 @@ title: Schmiede Application
                 Pernerinsel in Hallein, Salzburg, Austria.
               </a>
             </dd>
-            <dt>Cost Participation:</dt>
+            <dt>Application fee (when accepted):</dt>
             <dd>50Eur</dd>
             <dt>Application closes:</dt>
             <dd>May 31st</dd>
