--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -6,20 +6,22 @@ title: Saline Hallein - Schmiede
   <div class="container">
     <div class="col-md-8">
       <h1>
-        SALZBURG MEDIA ART AWARD
+        SALZBURG MEDIA ART GRANT
       </h1>
       <p class="lead">
         Since 2006 annually, the country of Salzburg, in cooperation with Schmiede
         Hallein, supports a media art project from Salzburg with a <strong>10.000Eur grant</strong>.
         <br />
-        The grant is intended to enable the realization of the proposed project.
-        Applicants need to be born in, currently be studying or officially be
-        living in Salzburg. Project proposal <strong>deadline is May 15th.</strong>
+        The grant is intended to enable the realization of the proposed project within the coming year.
+        Applicants need to have a representable biographical connection with the country of Salzburg. Project proposal <strong>deadline is May 2nd.</strong>
         <br /><br />
         The winning
         project/team will participate at the current Schmiede for inspiration,
-        development and networking and will be presented on the second Friday
-        of next Schmiede.
+        development and networking and will be presented during the next Schmiede.
+          <br /><br />
+        <a href="http://www.salzburg.gv.at/2434-cdneu_flyer_a5_medienpreis_2016.pdf"><strong>Link to detailed information for applicants (German)</a></strong>
+      <br />
+      direct contact in case of detailed questions: Mag. Andrea Zarfl, Telefon: ++43/662/8042-2282, Email: andrea.zarfl {AT} salzburg.gv.at
       </p>
       <p>
         <br />
@@ -34,10 +36,10 @@ title: Saline Hallein - Schmiede
   <div class="grey-text-section">
     <div class="container">
       <div class="col-md-6">
-        <img src="{{ site.base_url }}/images/medienkunstpreis/cover.png"  class="img-responsive" />
+        <!-- <img src="{{ site.base_url }}/images/medienkunstpreis/cover.png"  class="img-responsive" /
       </div>
       <div class="col-md-6">
-        <img src="{{ site.base_url }}/images/medienkunstpreis/text.png"  class="img-responsive" />
+        <img src="{{ site.base_url }}/images/medienkunstpreis/text.png"  class="img-responsive" />>--> 
       </div>
       <div style="clear: both;"></div>
     </div>
