--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -21,7 +21,13 @@ title: Saline Hallein - Schmiede
           <br /><br />
         <a href="http://www.salzburg.gv.at/2434-cdneu_flyer_a5_medienpreis_2016.pdf"><strong>Link to detailed information for applicants (German)</a></strong>
       <br />
-      direct contact in case of detailed questions: Mag. Andrea Zarfl, Telefon: ++43/662/8042-2282, Email: andrea.zarfl {AT} salzburg.gv.at
+      Direct contact in case of detailed questions: 
+      <br /> 
+      Mag. Andrea Zarfl 
+      <br /> 
+      Telefon: ++43/662/8042-2282
+      <br /> 
+      Email: andrea.zarfl {AT} salzburg.gv.at
       </p>
       <p>
         <br />
