--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -8,19 +8,20 @@ title: Saline Hallein - Schmiede
       <h1>
         SALZBURG MEDIA ART GRANT
       </h1>
-      <p class="lead">
+         <br /> 
+         <p class="lead">
         Since 2006 annually, the country of Salzburg, in cooperation with Schmiede
-        Hallein, supports a media art project from Salzburg with a <strong>10.000Eur grant</strong>.
+        Hallein, supports (a) media art artist(s) by providing a grant for a proposed  project with a <strong>10.000Eur grant</strong>.
         <br />
         The grant is intended to enable the realization of the proposed project within the coming year.
-        Applicants need to have a representable biographical connection with the country of Salzburg. Project proposal <strong>deadline is May 2nd.</strong>
+        Applicants need to have a representable biographical connection with the country of Salzburg. Project proposal must reach <strong>deadline is May 2nd.</strong>
         <br /><br />
         The winning
         project/team will participate at the current Schmiede for inspiration,
         development and networking and will be presented during the next Schmiede.
           <br /><br />
         <a href="http://www.salzburg.gv.at/2434-cdneu_flyer_a5_medienpreis_2016.pdf"><strong>Link to detailed information for applicants (German)</a></strong>
-      <br />
+      <br />   <br /> 
       Direct contact in case of detailed questions: 
       <br /> 
       Mag. Andrea Zarfl 
