--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -11,7 +11,7 @@ title: Saline Hallein - Schmiede
          <br /> 
          <p class="lead">
         Since 2006 annually, the country of Salzburg, in cooperation with Schmiede
-        Hallein, supports (a) media art artist(s) by providing a grant for a proposed  project with a <strong>10.000Eur grant</strong>.
+        Hallein, supports (a) media art artist(s) by providing a <strong>10.000Eur grant</strong> for a proposed project.
         <br />
         The grant is intended to enable the realization of the proposed project within the coming year.
         Applicants need to have a representable biographical connection with the country of Salzburg. Project proposal must reach <strong>deadline is May 2nd.</strong>
