--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -30,8 +30,29 @@ title: Saline Hallein - Schmiede
       <br /> 
       Email: andrea.zarfl {AT} salzburg.gv.at
       </p>
+           <br />
+           2015: Maria Morschitzky -  <a href="http://service.salzburg.gv.at/lkorrj/Index?cmd=detail_ind&nachrid=55308">The World as Material / Compositions for a Room</a>
+            <br />     <br />
+           2014: Christof Berthold & Marcuse Hafner - <a href="http://mitumback.xarch.eu/cargography/wordpress/">Car/go/graphy</a>
+           <br />     <br />
+           2013: Andrea Maurer - <a href="http://www.studio-5.at/index.php?/upcoming/gespraechsgegenstaende/">Gesprächsgegenstände</a>
+           <br />     <br />
+           2012: gold extra -  <a href="http://goldextra.com/de/from-darkness">From Darkness</a>
+           <br />     <br /> 
+           2011: Andreas Gröstlinger & Sebastian Kargl -  <a href="https://www.facebook.com/project.dialog">DIALOG</a>
+           <br />     <br />
+           2010: Bartholomäus Traubeck - <a href="http://traubeck.com/years/">YEARS</a>
+           <br />     <br />
+           2009: Korinna Lindinger & Karla Spiluttini - <a href="http://www.salzburg.gv.at/pdf-landespreis_medienkunst_2009.pdf">Schallzeichen</a> 
+           <br />     <br /> 
+           2008: Gebhard Sengmüller - <a href="http://www.gebseng.com/08_a_parallel_image/">A Parallel Image</a>
+           <br />     <br />
+           2007: Robert Praxmarer & Reinhold Bidner - <a href="http://www.1n0ut.com/cpu/">CPU</a>
+           <br />     <br />
+           2006: Claudia Rohrmoser & Marcel Schobel - <a href="http://www.salzburg.gv.at/pdf-preis_medienkunst_2006.pdf">SCHNITZEL WITH NOODLES AND CRISP APPLE STRUDEL</a>
       <p>
         <br />
+        
         <!-- <a href="{{ site.base_url }}/images/medienkunstpreis/medienkunstpreis-2014.pdf" class="btn btn-primary btn-lg yellow">
           Download 2014 Flyer & Form
         </a>-->
