--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -29,7 +29,10 @@ title: Saline Hallein - Schmiede
       Telefon: ++43/662/8042-2282
       <br /> 
       Email: andrea.zarfl {AT} salzburg.gv.at
-      </p>
+      
+      <br />
+      <strong> Preisträgerinnen: <strong/>
+      <br />
            <br />
            2015: Maria Morschitzky -  <a href="http://service.salzburg.gv.at/lkorrj/Index?cmd=detail_ind&nachrid=55308">The World as Material / Compositions for a Room</a>
             <br />     <br />
@@ -50,7 +53,7 @@ title: Saline Hallein - Schmiede
            2007: Robert Praxmarer & Reinhold Bidner - <a href="http://www.1n0ut.com/cpu/">CPU</a>
            <br />     <br />
            2006: Claudia Rohrmoser & Marcel Schobel - <a href="http://www.salzburg.gv.at/pdf-preis_medienkunst_2006.pdf">SCHNITZEL WITH NOODLES AND CRISP APPLE STRUDEL</a>
-      <p>
+      </p><p>
         <br />
         
         <!-- <a href="{{ site.base_url }}/images/medienkunstpreis/medienkunstpreis-2014.pdf" class="btn btn-primary btn-lg yellow">
